wandb/run-20230307_171558-356tak0d/files/output.log
Done.
Setting up the random seed for reproducibility...
Done.
Traceback (most recent call last):
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/__init__.py", line 1, in <module>
    from .trainers import OracleTrainer, FtdaNoaggrTrainer, FtdaTrainer, FdaTrainer, FdaInvTrainer, McdTrainer, LADDTrainer
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/trainers/__init__.py", line 1, in <module>
    from .oracle_trainer import OracleTrainer
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/trainers/oracle_trainer.py", line 2, in <module>
    from federated.trainers.trainer import Trainer
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/trainers/trainer.py", line 5, in <module>
    from general_trainer import GeneralTrainer
  File "/home/utente/Scrivania/PROVA/LADD/src/general_trainer.py", line 128
    print(cl_args.)
                  ^
SyntaxError: invalid syntax